# Evony_General_Analyzer

./: .gitignore  ACTIVE_COMPONENTS.md  CMakeLists.txt  Makefile  README.md  READMEV2.md  dump_generals.sh  general_analyzer  general_names.txt  imgui.ini  specialty_totals_only.csv
archive/legacy_include/: Compute.h  DbLoad.h  GeneralBuild.h  GeneralLoader.h  Stat.h  StatParse.h  Stats.h
archive/legacy_src/: Db.cpp  DbLoad.cpp  GeneralLoader.cpp  Importer.cpp  Stat.cpp  StatParse.cpp  main.cpp
archive/legacy_src/Expand_Specialty/Expand_Specialty/: SpecialtyExpander.cpp
archive/legacy_src/gui/: AppUI.cpp  AppUI.h  main.cpp
cmake/toolchains/: mingw-w64-x86_64.cmake
data/: Europe_Generals  analyzer_owned_state.template.json  canonical_keys.txt  canonical_stat_keys.txt  canonical_stat_keys_deprecated.txt  evony.db  evony.db-shm  evony.db-wal  lorenzo.txt
data/debug/: pending_stat_keys_20260217_233657.txt
data/import/imported/: Piccinino.txt
data/imported/: Aethelflaed.txt  Alfred_the_Great.txt  André_Masséna.txt  Arminius.txt  Artemisia_I.txt  Aurelian.txt  Barbarossa.txt  Basil_II.txt  Blanche.txt  Caesar.txt  Carus.txt  Caterina_Sforza.txt  Charles_VI.txt  Charles_XII.txt  Charles_the_Great_Awakened.txt  Cimon.txt  Clovis_I.txt  Cnut_the_Great.txt  Edward_III.txt  Edward_Teach.txt  Edward_the_Black_Prince.txt  El_Cid.txt  Elizabeth_I.txt  Francis_Drake.txt  Francis_I_of_France.txt  Gaius_Octavius.txt  George_Monk.txt  Godfrey_of_Bouillon.txt  Gonzalo.txt  Guinevere.txt  Gustavus_Adolphus.txt  Harald.txt  Harald_III.txt  Henry_IV.txt  Heraclius.txt  Isaac_Brock.txt  Isabella_I.txt  Jan_Karol_Chodkiewicz.txt  Joan_of_Arc.txt  John_Hawkwood.txt  (+53 more)
data/keys/: canonical_active_keys.txt  canonical_keys.txt  canonical_stat_keys.txt  canonical_stat_keys__20260220_141528.txt  generals__wounded_death_or_death_survival__from_import_files.txt  generals__wounded_to_death__or__death_to_survival.txt  pending_examples__20260220_141554.tsv  pending_stat_keys__20260220_141545.txt  pending_unmapped_keys.txt  pending_with_candidates.txt
include/: Compute.h  Db.h  General.h  GeneralBuild.h  GeneralDefinition.h  Importer.h  Stat.h  Stats.h
sql/: schema_v2.sql
src/: Stat.cpp  Stats.cpp  db.cpp  db.h  db_admin.cpp  db_admin.h  db_maintenance.cpp  db_maintenance.h  editor_state.h  main.cpp  main_gui.cpp  model.cpp  model.h  model_api.h  role_utils.h  ui.cpp  ui.h  util.h
src/Expand_Specialty/: specialty_expander
src/analyzer/: compute.cpp  compute.h  json.cpp  json.h  main_analyzer.cpp  model.cpp  model.h  readonly_db.cpp  readonly_db.h  ui.cpp  ui.h
src/gui/: AppUI.cpp  AppUI.h
src/importer/: DbImportV2.cpp  DbImportV2.h  GeneralLoaderV2.cpp  GeneralLoaderV2.h  import_service.cpp  import_service.h  main_importer.cpp
tools/: backfill_specialty_legacy.sh  normalize_files.sh
